cabal-version:       3.0

name:                hchess
version:             0.1.0.0
license-file:        LICENSE
author:              Thomas Li
maintainer:          guslithd@student.gu.se
build-type:          Simple
extra-source-files:  CHANGELOG.md

common commons
    build-depends:
        base >=4.12 && <4.13
        , relude == 0.7.*

    ghc-options:
        -Wall
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wcompat
        -Widentities
        -Wredundant-constraints
        -Wmissing-export-lists
        -Wpartial-fields

    mixins:
        base hiding (Prelude)
        , relude (Relude as Prelude)

    default-language: Haskell2010
    default-extensions:
        DerivingStrategies
        , GeneralizedNewtypeDeriving
        , InstanceSigs
        , LambdaCase
        , OverloadedStrings
        , ScopedTypeVariables
        , TupleSections

library
    import: commons

    exposed-modules:
        Chess

    build-depends:
        containers == 0.6.*

    hs-source-dirs:
        src
